# miraichan-music-lottery

./: .gitignore  .gitmodules  README.md  pyproject.toml
src/: app.py  player.html
src/music_lottery/: __init__.py  core.py  models.py  musiclib.py  utils.py
src/playerv2/: index.html
src/playerv2/assets/: index-91ZCbc8U.css  index-D1WYmBxl.js  index-DjeB410w.js
