[project]
name = "miraichan-music-lottery"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "NingmengLemon", email = "60469383+NingmengLemon@users.noreply.github.com" },
]
dependencies = [
    "fastapi[all]>=0.115.4",
    "sqlmodel>=0.0.22",
    "ApScheduler>=3.10.4",
    "filetype>=1.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false


[tool.pdm.scripts]
prod = { cmd = "fastapi run ./src/app.py" }
dev = { cmd = "fastapi dev ./src/app.py" }

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
